--- a/src/components/Display/Display.module.css
+++ b/src/components/Display/Display.module.css
@@ -4,18 +4,12 @@
     height: 16%;
     text-align: right;
     box-sizing: border-box;
+    white-space: nowrap;
 
     overflow-x: auto;
-    scrollbar-width: none;
     padding-right: 5px;
     background-color: #d0d6e1;
     border-radius: 10px;
     border-bottom: 10px solid #C3C8D4;
-    font-size: 5rem;
-}
-
-::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-    background: transparent; /* Chrome/Safari/Webkit */
+    font-size: 2.4rem;
 }
